--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>You won't belive what happened ... 😱</h1>
-  <p id="excuse">My dog ate my homework</p>
-  <button class="gen" onclick="generateExcuse()">Generate Excuse</button>
+  <p id="excuse">My dog ate my homework</p> 
+  <button class="gen" onclick="generateExcuse()">Generate Excuse</button> <!--Button generates new excuses on demand-->
   <script src="app.js"></script>
 </body>
 </html>
